; ModuleID = '/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_conv_user_id.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/hints/extr_hints-data.c_conv_user_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

@user_table = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@users = common dso_local global i32* null, align 8
@immediate_mode = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @conv_user_id(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @local_user_id(i32 %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp eq i32 %8, -1
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %31

11:                                               ; preds = %1
  %12 = load i32, i32* %4, align 4
  %13 = add nsw i32 %12, 1
  %14 = load i32, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @user_table, i32 0, i32 0, i32 0), align 4
  %15 = icmp slt i32 %13, %14
  %16 = zext i1 %15 to i32
  %17 = call i32 @assert(i32 %16)
  %18 = load i32*, i32** @users, align 8
  %19 = load i32, i32* %4, align 4
  %20 = sext i32 %19 to i64
  %21 = getelementptr inbounds i32, i32* %18, i64 %20
  store i32* %21, i32** %5, align 8
  %22 = load i32, i32* @immediate_mode, align 4
  %23 = icmp eq i32 %22, 1
  br i1 %23, label %24, label %29

24:                                               ; preds = %11
  %25 = load i32*, i32** %5, align 8
  %26 = load i32, i32* %4, align 4
  %27 = call i32 @load_user_metafile(i32* %25, i32 %26, i32 1)
  %28 = call i32 @assert(i32 %27)
  br label %29

29:                                               ; preds = %24, %11
  %30 = load i32*, i32** %5, align 8
  store i32* %30, i32** %2, align 8
  br label %31

31:                                               ; preds = %29, %10
  %32 = load i32*, i32** %2, align 8
  ret i32* %32
}

declare dso_local i32 @local_user_id(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @load_user_metafile(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
